<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FoodTime</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username_input">S</string>
    <string name="password_input">S</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="btnSchedule">Schedule Meetup</string>
    <string name="acceptedSection">Accepted Events</string>
    <string name="invitedSection">Pending Invites</string>
    <string name="action_person">Friends</string>
    <string name="action_addFriend">Add Friends</string>
    <string name="title_activity_schedule_invite_friend">ScheduleInviteFriend</string>
    <string name="meeting_title">Meeting Title</string>
    <string name="meeting_location">Location</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="done">Done</string>
    <string name="title_activity_accepted_event_view">AcceptedEventViewActivity</string>
    <string name="title_activity_dummy_event">DummyEventActivity</string>

</resources>
